# qatar-time-backend

./: .gitignore  Dockerfile  client.py  config.py  docker-compose.yaml  example.env  main.py  pyproject.toml  realtime_server.py  realtime_test.py  requirements.txt
models/: game.py  group.py  prediction.py  team.py  user.py
